# flower

./: CMakeLists.txt  INSTALL  README.md  build.sh
data/: CMakeLists.txt  flower.desktop  flower.desktop.in
data/style/: photo.css
po/: flower.pot
schemas/: CMakeLists.txt  net.launchpad.flower.gschema.xml
src/: CMakeLists.txt  Config.vala  Config.vala.cmake  Flower.vala
src/Core/: Photo.vala
src/Daemon/: CMakeLists.txt  Config.vala  DBusServer.vala  Daemon.vala  DatabaseManager.vala  Settings.vala
src/Daemon/Backends/: Backend.vala  LocalBackend.vala  WatchDog.vala
src/Services/: DBusManager.vala  PhotoManager.vala  Settings.vala  StyleManager.vala
src/Window/: MainWindow.vala
src/Window/Dialog/: FolderChooser.vala  ModifyDirectoryDialog.vala
src/Window/View/: GenericView.vala  ListView.vala  PhotoView.vala  WelcomeView.vala
